# awsma

./: AUTHORS  ChangeLog  README.md  config.json  generate-ssh-config  jamurah.sh  mkaws_generate_ssh  requirements.txt  sample-bashrc  setup.cfg  setup.py
awsma/: generate_ssh_config_filter.jq  jamoora  mkaws.sh  mkaws_activate.sh  mkaws_console  mkaws_deactivate.sh  mkaws_generate_ssh_config.sh  mkaws_mkenv.sh  open_console.py
examples/sample_client/: aws_config
plugins/aws/: leave_hook  load_hook
virtualenv/: setup.sh
virtualenv/hooks/: postactivate  postdeactivate  postmkvirtualenv
