[metadata]
name = jamoora
author = Aater Suleman
author-email = aater@flux7.com
summary = A virtualenv package for AWS credentials
description-file = README.md
license = MIT
classifier =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Intended Audience :: Developers
    Environment :: Console
keywords =
    jamoora    
home-page = http://jamoora.readthedocs.org/
zip_safe = False
provides_dist =
    jamoora

[files]
packages =
    jamoora
namespace_packages =
    jamoora
scripts =
    mkaws.sh
    mkaws_mkenv.sh
    mkaws_activate.sh
    mkaws_deactivate.sh

[global]
zip_safe = False
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
