[metadata]
name = awsma
author = Aater Suleman
author-email = aater@flux7.com
summary = A virtualenv package for AWS credentials
description-file = README.md
license = MIT
classifier =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Intended Audience :: Developers
    Environment :: Console
keywords =
    awsma    
home-page = https://github.com/Flux7Labs/awsma
zip_safe = False
provides_dist =
    awsma

[files]
packages =
    awsma
namespace_packages =
    awsma
scripts =
    awsma/mkaws.sh
    awsma/mkaws_mkenv.sh
    awsma/mkaws_activate.sh
    awsma/mkaws_deactivate.sh
    awsma/mkaws_generate_ssh_config.sh	

[global]
zip_safe = False
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
